--- a/files/Bladier_CV_long_academic.tex
+++ b/files/Bladier_CV_long_academic.tex
@@ -269,7 +269,7 @@ Title: ``Dependency Parsing for Lexicalized Tree Adjoining Grammars based on Sup
 \hspace{-20pt}
 \begin{tabular}{p{17cm}}
 	{\bf Internship Supervision}  \\[10pt]
-	Sommer 2023: Internship supervision (co-supervisor) with the topic “Annotation of semantic roles in French subcorpus of RRGparbank”, intern: Alena Johnen (University of D{\"u}sseldorf). \\[5pt]
+	Summer 2023: Internship supervision (co-supervisor) with the topic “Annotation of semantic roles in French subcorpus of RRGparbank”, intern: Alena Johnen (University of D{\"u}sseldorf). \\[5pt]
 	
 \end{tabular}
 
